@@ -8,7 +8,11 @@ Direct3D 9
 	* Fixed pinning of UVAtlas callbacks.
 	* Fixed a bug in AnimationController.GetAnimationSet that failed for base animation sets.
 
+Direct3D 10
+	* Fixed bug in Get/Set of bool arrays in EffectScalarVariable.
+
 Direct3D 11
 	* Added missing UnorderedAccessViewBufferFlags flag.
 	* Removed invalid range checks from FFT AttachBuffersAndPrecompute
 	* Added overloads to EffectVectorVariable.Set for int and bool vectors.
+	* Fixed bug in Get/Set of bool arrays in EffectScalarVariable.
